--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,11 @@
    width: 100%;
    text-align: center;
 }
+
+.button {
+        user-select: none;
+        -moz-user-select: none;
+        -khtml-user-select: none;
+        -webkit-user-select: none;
+        -o-user-select: none;
+} 
