--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
    text-align: center;
 }
 
-.button {
+.ss {
         user-select: none;
         -moz-user-select: none;
         -khtml-user-select: none;
