--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,13 @@ body {
 li {
    color: #ffffff;
    background-color: #4f4f4f;
+   padding: 10px;
+   transition-duration: 0.4s;
+}
+
+li:hover {
+   color: #4f4f4f;
+   background-color: #ffffff;
 }
 
 a {
