--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,27 @@
    text-align: center;
 }
 
+.alert {
+    /* position: absolute; */
+    padding: 20px;
+    background-color: #f44336;
+    color: white;
+    opacity: 1;
+    transition: opacity 0.6s;
+    margin-bottom: 15px;
+    user-select: none;
+    pointer-events: none;
+}
+
+#alertBoxs {
+    z-index: 99 !important;
+    position: absolute;
+    pointer-events: none;
+}
+
+.closebtn:hover {
+    color: black;
+}
 body {
    background-color: #85007c;
    color: #f1dbff;    
