--- a/css/style.css
+++ b/css/style.css
@@ -55,3 +55,19 @@ a {
         -webkit-user-select: none;
         -o-user-select: none;
 } 
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
