--- a/css/style.css
+++ b/css/style.css
@@ -50,23 +50,27 @@ a {
 }
 
 .ss {
-        user-select: none;
-        -moz-user-select: none;
-        -khtml-user-select: none;
-        -webkit-user-select: none;
-        -o-user-select: none;
+   user-select: none;
+   -moz-user-select: none;
+   -khtml-user-select: none;
+   -webkit-user-select: none;
+   -o-user-select: none;
 } 
 
 ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
+   list-style-type: none;
+   margin: 0;
+   padding: 0;
+   overflow: hidden;
+   background-color: #333;
+   margin-top: -10px;
+   margin-right: -8px;
+   margin-left: -10px;
+   user-select: none;
 }
 
 li a {
-  display: block;
-  text-align: center;
-  text-decoration: none;
+   display: block;
+   text-align: center;
+   text-decoration: none;
 }
