--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 .alert {
     /* position: absolute; */  
     padding: 20px;   
-    background-color: #f44336; 
+    background-color: #ff00d9; 
     color: white;
     opacity: 1; 
     transition: opacity 0.6s; 
